--- a/versions/latest/modules/en/pages/cluster-deployment/rke1-vs-rke2.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/rke1-vs-rke2.adoc
@@ -4,11 +4,11 @@ RKE2, also known as RKE Government, is a Kubernetes distribution that focuses on
 
 RKE1 and RKE2 have several slight behavioral differences to note, and this page will highlight some of these at a high level.
 
-=== Control Plane Components
+== Control Plane Components
 
 RKE1 uses Docker for deploying and managing control plane components, and it also uses Docker as the container runtime for Kubernetes. By contrast, RKE2 launches control plane components as static pods that are managed by the kubelet. RKE2's container runtime is containerd, which allows things such as mirroring a container image registry. RKE1 with Docker does not allow mirroring.
 
-=== Cluster API
+== Cluster API
 
 RKE2/K3s provisioning is built on top of the Cluster API (CAPI) upstream framework which often makes RKE2-provisioned clusters behave differently than RKE1-provisioned clusters.
 
@@ -20,6 +20,6 @@ The following are some specific example configuration changes that may cause the
 
 Users who are used to RKE1 provisioning should take note of this new RKE2 behavior which may be unexpected.
 
-=== Terminology
+== Terminology
 
 You will notice that some terms have changed or gone away going from RKE1 to RKE2. For example, in RKE1 provisioning, you use *node templates*; in RKE2 provisioning, you can configure your cluster node pools when creating or editing the cluster. Another example is that the term *node pool* in RKE1 is now known as *machine pool* in RKE2.
