--- a/versions/latest/modules/en/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/vsphere.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/vsphere.adoc
@@ -7,7 +7,7 @@ This page covers how to migrate from the in-tree vSphere cloud provider to out-o
 
 It follows the steps provided in the official https://vsphere-csi-driver.sigs.k8s.io/features/vsphere_csi_migration.html[vSphere migration documentation] and provides the steps to be performed in Rancher.
 
-=== Cloud-config Format Limitation
+== Cloud-config Format Limitation
 
 Existing volumes that were provisioned using the following cloud-config format won't get migrated due to an existing bug in vSphere Cloud Storage Interface (CSI).
 
