fixed set-up-cloud-providers/amazon.adoc FLAG for tabs

--- a/versions/latest/modules/en/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
@@ -25,7 +25,7 @@ To set up the Amazon cloud provider,
 . <<_1_create_an_iam_role_and_attach_to_the_instances,Create an IAM role and attach to the instances>>
 . <<_2_configure_the_clusterid,Configure the ClusterID>>
 
-=== 1. Create an IAM Role and attach to the instances
+== 1. Create an IAM Role and attach to the instances
 
 All nodes added to the cluster must be able to interact with EC2 so that they can create and remove resources. You can enable this interaction by using an IAM role attached to the instance. See https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/iam-roles-for-amazon-ec2.html#create-iam-role[Amazon documentation: Creating an IAM Role] how to create an IAM role. There are two example policies:
 
@@ -135,7 +135,7 @@ IAM policy for nodes with the `etcd` or `worker` role:
 }
 ----
 
-=== 2. Configure the ClusterID
+== 2. Configure the ClusterID
 
 The following resources need to tagged with a `ClusterID`:
 
@@ -171,11 +171,11 @@ Do not tag a resource with multiple owned or shared tags.
 ====
 
 
-=== Using Amazon Elastic Container Registry (ECR)
+== Using Amazon Elastic Container Registry (ECR)
 
 The kubelet component has the ability to automatically obtain ECR credentials, when the IAM profile mentioned in <<_1_create_an_iam_role_and_attach_to_the_instances,Create an IAM Role and attach to the instances>> is attached to the instance(s). When using a Kubernetes version older than v1.15.0, the Amazon cloud provider needs be configured in the cluster. Starting with Kubernetes version v1.15.0, the kubelet can obtain ECR credentials without having the Amazon cloud provider configured in the cluster.
 
-=== Using the Out-of-Tree AWS Cloud Provider
+== Using the Out-of-Tree AWS Cloud Provider
 
 [tabs,sync-group-id=k8s-distro]
 ======
@@ -186,7 +186,8 @@ Tab RKE2::
 Tab RKE::
 +
 1. [Node name conventions and other prerequisites ](https://cloud-provider-aws.sigs.k8s.io/prerequisites/) must be followed so that the cloud provider can find the instance. Rancher provisioned clusters don't support configuring `providerID`. :::note If you use IP-based naming, the nodes must be named after the instance followed by the regional domain name (`ip-xxx-xxx-xxx-xxx.ec2.+++<region>+++.internal`). If you have a custom domain name set in the DHCP options, you must set `--hostname-override` on `kube-proxy` and `kubelet` to match this naming convention. ::: To meet node naming conventions, Rancher allows setting `useInstanceMetadataHostname` when the `External Amazon` cloud provider is selected. Enabling `useInstanceMetadataHostname` will query ec2 metadata service and set `/hostname` as `hostname-override` for `kubelet` and `kube-proxy`: ```yaml rancher_kubernetes_engine_config: cloud_provider: name: external-aws useInstanceMetadataHostname: true ``` You must not enable `useInstanceMetadataHostname` when setting custom values for `hostname-override` for custom clusters. When you create a [custom cluster](../custom-clusters/custom-clusters.md), add [`--node-name`](../custom-clusters/rancher-agent-options.md) to the `docker run` node registration command to set `hostname-override` -- for example, `"$(hostname -f)"`. This can be done manually or by using **Show Advanced Options** in the Rancher UI to add **Node Name**. 2. Select the cloud provider. Selecting **External Amazon (out-of-tree)** sets `--cloud-provider=external` and enables `useInstanceMetadataHostname`. As mentioned in step 1, enabling `useInstanceMetadataHostname` will query the EC2 metadata service and set `http://169.254.169.254/latest/meta-data/hostname` as `hostname-override` for `kubelet` and `kube-proxy`. :::note You must disable `useInstanceMetadataHostname` when setting a custom node name for custom clusters via `node-name`. ::: ```yaml rancher_kubernetes_engine_config: cloud_provider: name: external-aws useInstanceMetadataHostname: true/false ``` Existing clusters that use an **External** cloud provider will set `--cloud-provider=external` for Kubernetes components but won't set the node name. 3. Install the AWS cloud controller manager after the cluster finishes provisioning. Note that the cluster isn't successfully provisioned and nodes are still in an `uninitialized` state until you deploy the cloud controller manager. This can be done manually, or via [Helm charts in UI](#helm-chart-installation-from-ui). Refer to the offical AWS upstream documentation for the [cloud controller manager](https://kubernetes.github.io/cloud-provider-aws).  
-====== ### Helm Chart Installation from CLI 
+
+=== Helm Chart Installation from CLI 
 
 [tabs,sync-group-id=k8s-distro]
 ======
@@ -197,7 +198,7 @@ Official upstream docs for [Helm chart installation](https://github.com/kubernet
 Tab RKE::
 +
 Official upstream docs for [Helm chart installation](https://github.com/kubernetes/cloud-provider-aws/tree/master/charts/aws-cloud-controller-manager) can be found on GitHub. 1. Add the Helm repository: ```shell helm repo add aws-cloud-controller-manager https://kubernetes.github.io/cloud-provider-aws helm repo update ``` 2. Create a `values.yaml` file with the following contents, to override the default `values.yaml`: ```yaml # values.yaml hostNetworking: true tolerations: - effect: NoSchedule key: node.cloudprovider.kubernetes.io/uninitialized value: 'true' - effect: NoSchedule value: 'true' key: node-role.kubernetes.io/controlplane nodeSelector: node-role.kubernetes.io/controlplane: 'true' args: - --configure-cloud-routes=false - --use-service-account-credentials=true - --v=2 - --cloud-provider=aws clusterRoleRules: - apiGroups: - "" resources: - events verbs: - create - patch - update - apiGroups: - "" resources: - nodes verbs: - '*' - apiGroups: - "" resources: - nodes/status verbs: - patch - apiGroups: - "" resources: - services verbs: - list - patch - update - watch - apiGroups: - "" resources: - services/status verbs: - list - patch - update - watch - apiGroups: - '' resources: - serviceaccounts verbs: - create - get - apiGroups: - "" resources: - persistentvolumes verbs: - get - list - update - watch - apiGroups: - "" resources: - endpoints verbs: - create - get - list - watch - update - apiGroups: - coordination.k8s.io resources: - leases verbs: - create - get - list - watch - update - apiGroups: - "" resources: - serviceaccounts/token verbs: - create ``` 3. Install the Helm chart: ```shell helm upgrade --install aws-cloud-controller-manager -n kube-system aws-cloud-controller-manager/aws-cloud-controller-manager --values values.yaml ``` Verify that the Helm chart installed successfully: ```shell helm status -n kube-system aws-cloud-controller-manager ``` 4. If present, edit the Daemonset to remove the default node selector `node-role.kubernetes.io/control-plane: ""`: ```shell kubectl edit daemonset aws-cloud-controller-manager -n kube-system ``` 5. (Optional) Verify that the cloud controller manager update succeeded: ```shell kubectl rollout status daemonset -n kube-system aws-cloud-controller-manager ```
-====== ### Helm Chart Installation from UI 
+=== Helm Chart Installation from UI 
 
 [tabs,sync-group-id=k8s-distro]
 ======
