--- a/versions/latest/modules/en/pages/installation-and-upgrade/best-practices/best-practices.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/best-practices/best-practices.adoc
@@ -2,14 +2,14 @@
 
 This guide contains our recommendations for running the Rancher server, and is intended to be used in situations in which Rancher manages downstream Kubernetes clusters.
 
-=== Recommended Architecture and Infrastructure
+== Recommended Architecture and Infrastructure
 
 Refer to this xref:installation-and-upgrade/best-practices/tips-for-running-rancher.adoc[guide] for our general advice for setting up the Rancher server on a high-availability Kubernetes cluster.
 
-=== Deployment Strategies
+== Deployment Strategies
 
 This xref:installation-and-upgrade/best-practices/deployment-strategy.adoc[guide] is designed to help you choose whether a regional deployment strategy or a hub-and-spoke deployment strategy is better for a Rancher server that manages downstream Kubernetes clusters.
 
-=== Installing Rancher in a VMware vSphere Environment
+== Installing Rancher in a VMware vSphere Environment
 
 This xref:installation-and-upgrade/best-practices/rancher-on-vsphere.adoc[guide] outlines a reference architecture for installing Rancher in a vSphere environment, in addition to standard vSphere best practices as documented by VMware.
