--- a/versions/latest/modules/en/pages/installation-and-upgrade/best-practices/tips-for-running-rancher.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/best-practices/tips-for-running-rancher.adoc
@@ -8,27 +8,27 @@ If you are installing Rancher in a vSphere environment, refer to the best practi
 
 When you set up your high-availability Rancher installation, consider the following:
 
-=== Run Rancher on a Separate Cluster
+== Run Rancher on a Separate Cluster
 
 Don't run other workloads or microservices in the Kubernetes cluster that Rancher is installed on.
 
-=== Make sure nodes are configured correctly for Kubernetes
+== Make sure nodes are configured correctly for Kubernetes
 
 It's important to follow K8s and etcd best practices when deploying your nodes, including disabling swap, double checking you have full network connectivity between all machines in the cluster, using unique hostnames, MAC addresses, and product_uuids for every node, checking that all correct ports are opened, and deploying with ssd backed etcd. More details can be found in the https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/install-kubeadm/#before-you-begin[kubernetes docs] and https://etcd.io/docs/v3.5/op-guide/performance/[etcd's performance op guide].
 
-=== When using RKE: Back up the Statefile
+== When using RKE: Back up the Statefile
 
 RKE keeps record of the cluster state in a file called `cluster.rkestate`. This file is important for the recovery of a cluster and/or the continued maintenance of the cluster through RKE. Because this file contains certificate material, we strongly recommend encrypting this file before backing up. After each run of `rke up` you should backup the state file.
 
-=== Run All Nodes in the Cluster in the Same Datacenter
+== Run All Nodes in the Cluster in the Same Datacenter
 
 For best performance, run all three of your nodes in the same geographic datacenter. If you are running nodes in the cloud, such as AWS, run each node in a separate Availability Zone. For example, launch node 1 in us-west-2a, node 2 in us-west-2b, and node 3 in us-west-2c.
 
-=== Development and Production Environments Should be Similar
+== Development and Production Environments Should be Similar
 
 It's strongly recommended to have a "staging" or "pre-production" environment of the Kubernetes cluster that Rancher runs on. This environment should mirror your production environment as closely as possible in terms of software and hardware configuration.
 
-=== Monitor Your Clusters to Plan Capacity
+== Monitor Your Clusters to Plan Capacity
 
 The Rancher server's Kubernetes cluster should run within the xref:installation-and-upgrade/requirements/installation-requirements.adoc[system and hardware requirements] as closely as possible. The more you deviate from the system and hardware requirements, the more risk you take.
 
