--- a/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/nodes-in-amazon-ec2.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/nodes-in-amazon-ec2.adoc
@@ -9,12 +9,12 @@ If the Rancher server will be installed on a K3s Kubernetes cluster, you only ne
 
 If the Rancher server is installed in a single Docker container, you only need one instance.
 
-=== 1. Optional Preparation
+== 1. Optional Preparation
 
 * *Create IAM role:* To allow Rancher to manipulate AWS resources, such as provisioning new storage or new nodes, you will need to configure Amazon as a cloud provider. There are several things you'll need to do to set up the cloud provider on EC2, but part of this process is setting up an IAM role for the Rancher server nodes. For the full details on setting up the cloud provider, refer to this xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[page.]
 * *Create security group:* We also recommend setting up a security group for the Rancher nodes that complies with the xref:installation-and-upgrade/requirements/installation-requirements.adoc#_port_requirements[port requirements for Rancher nodes.]
 
-=== 2. Provision Instances
+== 2. Provision Instances
 
 . Log into the https://console.aws.amazon.com/ec2/[Amazon AWS EC2 Console] to get started. Make sure to take note of the *Region* where your EC2 instances (Linux nodes) are created, because all of the infrastructure for the Rancher management server should be in the same region.
 . In the left panel, click *Instances*.
@@ -40,7 +40,7 @@ If the nodes are being used for an RKE Kubernetes cluster, install Docker on eac
 ====
 
 
-=== 3. Install Docker and Create User for RKE Kubernetes Cluster Nodes
+== 3. Install Docker and Create User for RKE Kubernetes Cluster Nodes
 
 . From the https://console.aws.amazon.com/ec2/[AWS EC2 console,] click *Instances* in the left panel.
 . Go to the instance that you want to install Docker on. Select the instance and click menu:Actions[Connect].
@@ -73,7 +73,7 @@ To find out whether a script is available for installing a certain Docker versio
 
 *Result:* You have set up Rancher server nodes that fulfill all the node requirements for OS, Docker, hardware and networking.
 
-=== Next Steps for RKE Kubernetes Cluster Nodes
+== Next Steps for RKE Kubernetes Cluster Nodes
 
 If you are going to install an RKE cluster on the new nodes, take note of the *IPv4 Public IP* and *Private IP* of each node. This information can be found on the *Description* tab for each node after it is created. The public and private IP will be used to populate the `address` and `internal_address` of each node in the RKE cluster configuration file, `rancher-cluster.yml`.
 
