--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/other-installation-methods.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/other-installation-methods.adoc
@@ -1,12 +1,12 @@
 = Other Installation Methods
 
-=== Air Gapped Installations
+== Air Gapped Installations
 
 Follow xref:installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc[these steps] to install the Rancher server in an air gapped environment.
 
 An air gapped environment could be where Rancher server will be installed offline, behind a firewall, or behind a proxy.
 
-=== Docker Installations
+== Docker Installations
 
 The xref:[single-node Docker installation] is for Rancher users that are wanting to test out Rancher. Instead of running on a Kubernetes cluster using Helm, you install the Rancher server component on a single node using a `docker run` command.
 
