--- a/versions/latest/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
@@ -14,13 +14,13 @@ When restoring a backup into a new Rancher setup, the version of the new setup s
 ====
 
 
-=== Prerequisites
+== Prerequisites
 
 The Rancher version must be v2.5.0 and up.
 
 Refer link:migrate-to-a-new-cluster.adoc#2-restore-from-backup-using-a-restore-custom-resource[here] for help on restoring an existing backup file into a v1.22 cluster in Rancher v2.6.3.
 
-=== 1. Install the Rancher Backup operator
+== 1. Install the Rancher Backup operator
 
 The backup storage location is an operator-level setting, so it needs to be configured when the Rancher Backups application is installed or upgraded.
 
@@ -41,7 +41,7 @@ There is a known issue in Fleet that occurs after performing a restoration using
 ====
 
 
-=== 2. Perform a Backup
+== 2. Perform a Backup
 
 To perform a backup, a custom resource of type Backup must be created.
 
