--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc
@@ -2,7 +2,7 @@
 
 This section describes how the kubectl CLI, the kubeconfig file, and the authorized cluster endpoint work together to allow you to access a downstream Kubernetes cluster directly, without authenticating through the Rancher server. It is intended to provide background information and context to the instructions for link:use-kubectl-and-kubeconfig.adoc#authenticating-directly-with-a-downstream-cluster[how to set up kubectl to directly access a cluster.]
 
-=== About the Kubeconfig File
+== About the Kubeconfig File
 
 The kubeconfig file is used to configure access to Kubernetes when used in conjunction with the kubectl command line tool (or other clients).
 
@@ -19,7 +19,7 @@ After you download the kubeconfig file, you are able to use the kubeconfig file 
 
 If admins have xref:api/api-tokens.adoc#_disable_tokens_in_generated_kubeconfigs[kubeconfig token generation turned off], the kubeconfig file requires that the xref:rancher-admin/cli/cli.adoc[Rancher CLI] to be present in your PATH.
 
-=== Two Authentication Methods for RKE Clusters
+== Two Authentication Methods for RKE Clusters
 
 If the cluster is not an xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[RKE cluster,] the kubeconfig file allows you to access the cluster in only one way: it lets you be authenticated with the Rancher server, then Rancher allows you to run kubectl commands on the cluster.
 
@@ -34,7 +34,7 @@ To use the authorized cluster endpoint, you need to configure kubectl to use the
 
 These methods of communicating with downstream Kubernetes clusters are also explained in the xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc[architecture page] in the larger context of explaining how Rancher works and how Rancher communicates with downstream clusters.
 
-=== About the kube-api-auth Authentication Webhook
+== About the kube-api-auth Authentication Webhook
 
 The `kube-api-auth` microservice is deployed to provide the user authentication functionality for the xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_authorized_cluster_endpoint[authorized cluster endpoint,]. When you access the user cluster using `kubectl`, the cluster's Kubernetes API server authenticates you by using the `kube-api-auth` service as a webhook.
 
