--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
@@ -5,7 +5,7 @@ This section describes how to manipulate your downstream Kubernetes cluster with
 
 For more information on using kubectl, see https://kubernetes.io/docs/reference/kubectl/overview/[Kubernetes Documentation: Overview of kubectl].
 
-=== Accessing Clusters with kubectl Shell in the Rancher UI
+== Accessing Clusters with kubectl Shell in the Rancher UI
 
 You can access and manage your clusters by logging into Rancher and opening the kubectl shell in the UI. No further configuration necessary.
 
@@ -13,7 +13,7 @@ You can access and manage your clusters by logging into Rancher and opening the 
 . Go to the cluster you want to access with kubectl and click *Explore*.
 . In the top navigation menu, click the *Kubectl Shell* button. Use the window that opens to interact with your Kubernetes cluster.
 
-=== Accessing Clusters with kubectl from Your Workstation
+== Accessing Clusters with kubectl from Your Workstation
 
 This section describes how to download your cluster's kubeconfig file, launch kubectl from your workstation, and access your downstream cluster.
 
@@ -39,7 +39,7 @@ These instructions assume that you have already created a Kubernetes cluster, an
 
 . From your workstation, launch kubectl. Use it to interact with your kubernetes cluster.
 
-=== Note on Resources Created Using kubectl
+== Note on Resources Created Using kubectl
 
 Rancher will discover and show resources created by `kubectl`. However, these resources might not have all the necessary annotations on discovery. If an operation (for instance, scaling the workload) is done to the resource using the Rancher UI/API, this may trigger recreation of the resources due to the missing annotations. This should only happen the first time an operation is done to the discovered resource.
 
