--- a/versions/latest/modules/en/pages/cluster-admin/project-admin/project-resource-quotas/project-resource-quotas.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/project-admin/project-resource-quotas/project-resource-quotas.adoc
@@ -9,7 +9,7 @@ Resource quotas can also be set when a new project is created. For details, refe
 
 Resource quotas in Rancher include the same functionality as the https://kubernetes.io/docs/concepts/policy/resource-quotas/[native version of Kubernetes]. In Rancher, resource quotas have been extended so that you can apply them to projects. For details on how resource quotas work with projects in Rancher, refer to xref:cluster-admin/project-admin/project-resource-quotas/resource-quotas-in-projects.adoc[this page.]
 
-=== Applying Resource Quotas to Existing Projects
+== Applying Resource Quotas to Existing Projects
 
 Edit resource quotas when:
 
